--- a/news
+++ b/news
@@ -1,7 +1,6 @@
 {
-"tit1" : "توجد مسابقة",
-"mes1" : "السلام عليكم",
-"txt1" : "تحديث جديد ",
-"dat1": "2024:05:26",
+"tit1" : " تنبيه هام!!",
+"mes1" : "  قريبأ سيتم اضافة طرق سحب جديدة للتطبيق ",
+"dat1": "",
 "url1" : ""
 }
